# athena

./: .beans.yml  .env.example  .gitignore  AGENTS.md  DESIGN_VISION.md  Dockerfile  README.md  TESTS.md  demo.sh  docker-compose.allinone.yml  docker-compose.demo.yml  docker-compose.screenshots.yml  docker-compose.yml  pyproject.toml
.beans/: pkms-0k8s--create-stress-test-orchestration-script.md  pkms-0xj8--investigate-and-prevent-runaway-api-usage.md  pkms-15v4--add-connection-pooling-or-queue-for-database-write.md  pkms-1b01--add-pagination-to-atlas-search.md  pkms-1s70--fix-httpx-misplaced-in-dev-dependencies.md  pkms-1x6r--add-random-note-discovery-feature.md  (+173 more)
gardener/: AGENTS.md  CLI_GARDENERS.md  api_usage.py  automation.py  bootstrap.py  branding.py  config.py  db.py  file_state.py  git_state.py  main.py  mcp_server.py  mcp_tools.py  provenance.py  pyproject.toml  state.py
gardener/backends/: __init__.py  anthropic.py  base.py  openai.py
gardener/tests/: conftest.py  test_auth.py  test_backends.py  test_endpoints.py  test_gardener_worker.py  test_json_parsing.py  test_mcp_tools.py  test_search_atlas.py  test_state.py  test_xss_sanitization.py
gardener/tests/fixtures/: __init__.py  generate_notes.py
gardener/tests/fixtures/templates/: home.md  journal.md  people.md  projects.md  reading.md  tech.md  wellness.md
gardener/tests/stress/: CHAOS.md  __init__.py  chaos_tools.py  test_stress_chaos.py  test_stress_concurrent.py  test_stress_db_contention.py  test_stress_ingestion.py  test_stress_large_repo.py  utils.py
gardener/workers/: gardener.py
(+94 files in other folders)
