[project]
name = "gardener"
version = "0.1.0"
description = "The Gardener - Background service and API for Project Athena"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "anthropic>=0.76.0",
    "mcp>=1.25.0",
    "httpx>=0.28.1",
    "watchfiles>=1.1.1",
    "aiosqlite>=0.20.0",
]

[tool.uv]
package = false
