[project]
name = "gardener"
version = "0.1.0"
description = "The Gardener - Background service and API for Project Athena"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "anthropic>=0.76.0",
    "mcp>=1.25.0",
    "httpx>=0.28.1",
    "watchfiles>=1.1.1",
    "aiosqlite>=0.20.0",
    "pillow>=12.1.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.13",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "stress: stress/load testing scenarios (deselect with '-m \"not stress\"')",
]
